--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,31 +1,23 @@
 server {
     listen 80;
     server_name _;
-
-    # Główna ścieżka aplikacji
     root /var/www/html;
     index index.php index.html index.htm;
 
-    # Obsługa statycznych plików
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.php?$query_string;          #obsluga rootingu 
     }
 
     # Przekazanie zapytań .php do PHP-FPM
     location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        try_files $uri =404;             #sprawdzenie czy plik istnieje
+        fastcgi_pass php:9000;          #przekazanie do PHP-FPM
+        fastcgi_index index.php;               #domyślny plik PHP
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_index index.php;
-        # kontener php w Twoim compose nazywa się "php"
-        fastcgi_pass php:9000;
-        # opcjonalnie:
-        # fastcgi_buffers 16 16k;
-        # fastcgi_buffer_size 32k;
+        include fastcgi_params;
     }
 
-    # Ukryj pliki .ht*
     location ~ /\.ht {
-        deny all;
+        deny all;           #blokuje dostęp do plików .htaccess, .htpasswd itp.
     }
 }
