--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,8 @@ services:
     environment:
       PMA_HOST: mysql
       PMA_PORT: 3306
-      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/mysql_root_password
+      PMA_USER: root
+      MYSQL_ROOT_PASSWORD: /run/secrets/mysql_root_password
     secrets:
       - mysql_root_password
     networks:
